MFC r285735:   lseek() allows an offset to be set beyond the end of file. Using   it to check that partition has enough space to write bootcode doesn't   work. Use the known size of provider instead.

PR:		201504